Unset Box Shadow
It adds unwanted top border on white themes of gtk

--- a/src/style.css
+++ b/src/style.css
@@ -61,6 +61,7 @@ window,#main_box{
   background-color: transparent;
   color: #ffffff;
   border-bottom: 4px solid rgba(255, 255, 255, 0.2);
+  box-shadow: unset;
 }
 #i3 button.focused {
   border-bottom: 4px solid rgba(255, 255, 255, 0.8);
